--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -15,7 +15,7 @@
  *  ------------------------------------------------------------------
  *
  *  TOC:
- *  # base style overrides
+ *  # share style overrides
  *    ## links
  *  # typography & general theme styles
  *    ## Lists
@@ -67,7 +67,7 @@
 
 
 /* ===================================================================
- * # base style overrides
+ * # share style overrides
  *
 
 
